update policy to Yandex
update policy to Yandex

--- a/RU/policy/index.html
+++ b/RU/policy/index.html
@@ -114,7 +114,7 @@
 
 Мы можем собирать неперсональные данные, которые включают такую ​​информацию, как тип используемого мобильного устройства, уникальный идентификатор вашего мобильного устройства, IP-адрес вашего мобильного устройства, мобильную операционную систему, тип мобильного интернет-браузера, который вы используете, и другие статистические данные.
 
-<div>Кроме того, мы можем использовать сторонние сервисы, такие как <a href="https://policies.google.com/privacy">Google Analytics</a>, которые собирают, контролируют и анализируют этот тип информации, чтобы увеличить функциональность нашего Сервиса. Эти сторонние поставщики услуг имеют свои собственные политики конфиденциальности, касающиеся того, как они используют такую ​​информацию. Мы не контролируем и не несем ответственности за контент, политику конфиденциальности или практику сторонних служб.</div>
+<div>Кроме того, мы можем использовать сторонние сервисы, такие как <a href="https://policies.google.com/privacy">Google Analytics</a> и <a href="https://yandex.com/legal/confidential/">Yandex Services</a>, которые собирают, контролируют и анализируют информацию, чтобы улучшить функциональность нашего Сервиса, а так же предоставить персонализированную рекламу. Эти сторонние поставщики услуг имеют свои собственные политики конфиденциальности, касающиеся того, как они используют такую ​​информацию. Мы не контролируем и не несем ответственности за контент, политику конфиденциальности или практику сторонних служб.</div>
 
 <p>
 <h2 class="lefttext">Соблюдение законов</h2>
