--- a/policy/index.html
+++ b/policy/index.html
@@ -114,7 +114,7 @@ These applications are provided by Aleksey Kozlov for use as is.</div>
 
 We may collect Data that include information such as the type of mobile device you use, your mobile device unique ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browser you use and other statistics.
 
-<div>In addition, we may use third party services such as <a href="https://policies.google.com/privacy">Google Analytics</a> that collect, monitor and analyze this type of information in order to increase our Service's functionality. These third party service providers have their own privacy policies addressing how they use such information.
+<div>In addition, we may use third party services, such as <a href="https://policies.google.com/privacy">Google Analytics</a> and <a href="https://yandex.com/legal/confidential/">Yandex Services</a>, that collect, monitor and analyze information to enhance the functionality of our Service and to provide personalized advertising. These third party service providers have their own privacy policies addressing how they use such information.
 
 We have no control over, and assume no responsibility for the content, privacy policies or practices of any third party services.</div>
 
